k8s-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: my-app-prod
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: order-service
