k8s-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order-service-route
  namespace: my-app-prod
  labels:
    app: order-service
spec:
  host: orders.apps.mycluster.openshift.com
  to:
    kind: Service
    name: order-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
